# c-autotools-template-small

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
src/: cfgfile.c  cfgfile.h  executor.c  executor.h  myapp.c  reporter.c  reporter.h
tests/: test_cfgfile.c  test_executor.c  test_reporter.c
